[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/PressStart2P.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/DialogController.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=5]
resource_name = "OpenAnimation"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.379056, 0.5 ),
"transitions": PoolRealArray( 6.06, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0.8, 0.4 ), Vector2( 1, 1 ) ]
}

[node name="Dialog" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -215.0
margin_top = -63.5
margin_right = 215.0
margin_bottom = 63.5
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0, 0 )
rect_pivot_offset = Vector2( 215, 63.5 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 430.0
margin_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "MSG"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 65.0
margin_right = 430.0
margin_bottom = 127.0
grow_vertical = 2
size_flags_vertical = 3
custom_constants/separation = 120
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 31.0
margin_right = 155.0
margin_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
alignment = 1

[node name="BtnA" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 9.0
margin_right = 124.0
margin_bottom = 41.0
rect_min_size = Vector2( 0, 32 )
focus_mode = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
enabled_focus_mode = 1
text = "ButtonA"
flat = true

[node name="KeyA" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 124.0
margin_bottom = 53.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 5
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "[Key for btnA]"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 275.0
margin_right = 399.0
margin_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="BtnB" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 9.0
margin_right = 124.0
margin_bottom = 41.0
rect_min_size = Vector2( 0, 32 )
focus_mode = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
enabled_focus_mode = 1
text = "ButtonB"
flat = true

[node name="KeyB" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 45.0
margin_right = 124.0
margin_bottom = 53.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 5
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "[Key for btnB]"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/OpenAnimation = SubResource( 5 )
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/BtnA" to="." method="_on_BtnA_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer2/BtnB" to="." method="_on_BtnB_pressed"]
